src/objects/Talent__c.object
<CustomObject>
    <description>This is a single object representing a person in our marketing who is either an existing customer (&apos;Account&apos;), doctor (&apos;User&apos; with &apos;Clinical Doctor&apos; profile), or neither (we call these other actors &apos;Extras&apos;). This is NOT the object to which a talent release would be attached.</description>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Talent</relationshipLabel>
        <relationshipName>Talent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doctor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Clinical Doctor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Talent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A person recorded for use in our marketing who is not already in our database - meaning, neither a doctor nor customer because they&apos;re already in our system as Users or Accounts.</description>
        <label>Extra</label>
        <referenceTo>Extra__c</referenceTo>
        <relationshipLabel>Talent</relationshipLabel>
        <relationshipName>Talent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Full Name</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <label>Talent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Comment__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Talent-{0}</displayFormat>
        <label>Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Talent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>